--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -2,16 +2,22 @@
 <html>
 
 <head>
-  <title>Bootstrap Dev Server</title>
-  <script src="/assets/app.js"></script>
+  <title>index</title>
 </head>
 
 <body>
   <div id="app">
     {{> title}}
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling
-      extra attention to featured content or information.</p>
-    </div>
-  </body>
+    <p class="lead">
+      This is a simple hero unit, a simple jumbotron-style component for calling
+      extra attention to featured content or information.
+    </p>
+    <p>
+      <a href="A/index.html">A</a>
+      <br>
+      <a href="B/index.html">B</a>
+    </p>
+  </div>
+</body>
 
-  </html>
+</html>
